# pytorch_cpp_api_test

./: README.md  start.bat
script/: test.py  tracing.py  transform_to_onnx.py
src/: CMakeLists.txt  main.cpp
